--- a/BSSCSFramework/BSSCS_DOCS/conv.html
+++ b/BSSCSFramework/BSSCS_DOCS/conv.html
@@ -3,7 +3,7 @@
 		<title>BSSCS CNN</title>		
 	</head>
 	<body>
-		<a href="main.html">Back</a>
+		<a href="main.html">Back - Main</a>
 		<h1>BSSCS Convolutional Neural Network</h1>
 		<div>
 			<b>create_cnn_block(self, filters, kernel_size, cnn_strides, pool_size, pooling_strides, cnn_padding='SAME', cnn_activation=tf.nn.relu, pooling_padding='VALID', input_shape=None, input=None)</b>
