US184-Task196-Classifier-Docs

--- a/BSSCSFramework/BSSCS_DOCS/main.html
+++ b/BSSCSFramework/BSSCS_DOCS/main.html
@@ -13,7 +13,7 @@
 			<p>Handles Creating Convolutional Neural Networks and wraps around the base TensorFlow Implementations</p>
 		</div>
 		<div>
-			<a href=""><h2>Classifier Class</h2></a>
+			<a href="class.html"><h2>Classifier Class</h2></a>
 			<p>Handles Creating Classifiers and wraps around the base TensorFlow Implementations</p>
 		</div>
 		<div>
