patient management docs

--- a/TBI-GUI/GUI_DOCS/main.html
+++ b/TBI-GUI/GUI_DOCS/main.html
@@ -8,5 +8,9 @@
 			<a href="viewScanDoc.html"><h2>ScanVisualizerScene.html</h2></a>
 			<p>Creates the scan visualizer scene to display in the GUI.</p>
 		</div>
+		<div>
+			<a href="patientManagementDoc.html"><h2>Patient Management</h2></a>
+			<p>Manages patient storage and encryption.</p>
+		</div>
 	</body>
 </html
