--- a/TBI-GUI/GUI_DOCS/patientManagementDoc.html
+++ b/TBI-GUI/GUI_DOCS/patientManagementDoc.html
@@ -13,22 +13,27 @@
 					an easy mechanism for saving and refreshing data.
 				</p>
 			</span><br>
+
       <b><code>String buildDefaultPath()</code></b>
-      <br>
-      <span>Creates the default path for the patient storage directory</span>
+    	<br>
+    	<span>
+				Creates the default path for the patient storage directory
+			</span>
 			<span>
 				<p>Inputs:</p>
-				<p>- None</p>
+					<p>- None</p>
         <p>Returns:</p>
   				<p>- The full path to the program directory <code>src/resources/patients</code></p>
 			</span>
 
 			<b><code>String getDefaultPath()</code></b>
       <br>
-      <span>Returns the current default path for the patient storage directory</span>
+      <span>
+				Returns the current default path for the patient storage directory
+			</span>
 			<span>
 				<p>Inputs:</p>
-				<p>- None</p>
+					<p>- None</p>
         <p>Returns:</p>
   				<p>- The current default path</p>
 			</span>
