US194-Task209-DICOM-Docs

--- a/BSSCSFramework/BSSCS_DOCS/main.html
+++ b/BSSCSFramework/BSSCS_DOCS/main.html
@@ -17,11 +17,11 @@
 			<p>Handles Creating Classifiers and wraps around the base TensorFlow Implementations</p>
 		</div>
 		<div>
-			<a href=""><h2>Image Processing</h2></a>
+			<a href="doc.html"><h2>Image Processing</h2></a>
 			<p>Methods to help with base image processing</p>
 		</div>
 		<div>
-			<a href=""><h2>Image Importer</h2></a>
+			<a href="dicom.html"><h2>Image Importer</h2></a>
 			<p>Methods used to import DICOM images</p>
 		</div>
 	</body>
