--- a/BSSCSFramework/BSSCS_DOCS/main.html
+++ b/BSSCSFramework/BSSCS_DOCS/main.html
@@ -24,5 +24,9 @@
 			<a href="dicom.html"><h2>Image Importer</h2></a>
 			<p>Methods used to import DICOM images</p>
 		</div>
+		<div>
+			<a href="conversion.html"><h2>Image Conversion</h2></a>
+			<p>Methods used to convert DICOM images to NIFTI format</p>
+		</div>
 	</body>
 </html
