Create documentation for CNNVisualization, Landing, and LTA docs. Also fixed indentation on existing GUI docs.

--- a/TBI-GUI/GUI_DOCS/CNNVisualizationDoc.html
+++ b/TBI-GUI/GUI_DOCS/CNNVisualizationDoc.html
@@ -1,29 +1,31 @@
 <html>
 	<head>
-		<title>View Scan UI Page Documentation</title>
+		<title>CNN Visualization UI Page Documentation</title>
 	</head>
 	<body>
 		<a href="main.html">Back - Main</a>
 
-		<h1>View Scan GUI Page</h1>
+		<h1>CNN Visualization GUI Page</h1>
 		<div>
-			<span>The purpose of this is to layout the view scan page and fill it with</span>
+			<span>
+			<span>The purpose of this is to layout the CNN Visualization page and fill it with</span>
 			<br>
 			<span>elements pertaining to the it. This is accomplished using</span>
 			<br>
 			<span>the Javafx library for all GUI elements and the builder design pattern</span>
 			<br>
 			<span>to create similar or repeating elements.</span>
-			<br><br>
+			<br>
 
+			</span><br>
 			<b>Scene initializeScene(StateManager manager)</b>
 			<br>
-			<span>Method for View Scan Scene construction</span>
+			<span>Method for CNN Visualization Scene construction</span>
 			<span>
 			<p>Inputs:</p>
 			<p> - StateManager: object to manage state of the UI </p>
 			<p>Returns:</p>
-			<p>- A scene filled with elements pertaining to the view scan page</p>
+			<p>- A scene filled with elements pertaining to the CNN Visualization page</p>
 			</span>
 		</div>
 	</body>
