--- a/TBI-GUI/GUI_DOCS/patientManagementDoc.html
+++ b/TBI-GUI/GUI_DOCS/patientManagementDoc.html
@@ -10,7 +10,8 @@
 			<span>
 				<p>
 					The purpose of this static class is to manage patient storage and encryption and provide
-					an easy mechanism for saving and refreshing data.
+					an easy mechanism for saving and refreshing data. Code can be found on
+					<a href="https://github.com/wezleysherman/TBI-NN-421/blob/master/TBI-GUI/src/utils/PatientManagement.java">Github</a>.
 				</p>
 				<p>
 					Creating a storage system for patient data required us to consider <a href="https://www.hhs.gov/hipaa/for-professionals/security/laws-regulations/index.html">
