--- a/TBI-GUI/GUI_DOCS/main.html
+++ b/TBI-GUI/GUI_DOCS/main.html
@@ -13,6 +13,10 @@
 			<p>Manages patient storage and encryption.</p>
 		</div>
 		<div>
+			<a href="patientDoc.html"><h2>Patient</h2></a>
+			<p>Patient object.</p>
+		</div>
+		<div>
 			<a href="algorithmVisualizationDoc.html"><h2>Algoithm Visualization Scene</h2></a>
 			<p>Creates the algorithm visualization scene to display in the GUI.</p>
 		</div>
