updated PM docs

--- a/TBI-GUI/GUI_DOCS/patientManagementDoc.html
+++ b/TBI-GUI/GUI_DOCS/patientManagementDoc.html
@@ -166,6 +166,19 @@
 			<p>Returns:</p>
 			<p>- Hashtable with list of all patients stored (key=uid,value=PatientEntry)</p>
 			</span>
+
+			<b><code>LinkedList<PatientEntry> dateSortPatient()</code></b>
+			<br>
+			<span>
+			Gets a list of patients sorted by the date they were last saved
+			</span>
+			<span>
+			<p>Inputs:</p>
+			<p>- None</p>
+			<p>Returns:</p>
+			<p>- LinkedList</p>
+			</span>
+			
 		</div>
 	</body>
 </html>
