documentation for patient

--- a/TBI-GUI/GUI_DOCS/patientDoc.html
+++ b/TBI-GUI/GUI_DOCS/patientDoc.html
@@ -58,6 +58,23 @@
 			<p>- None</p>
 			</span>
 
+			<b><code>Patient(String fname, String lname, Date pDate, String pNotes, File pScan, String uid)</code></b>
+			<br>
+			<span>
+			Creates a Patient with one scan and an established UID
+			</span>
+			<span>
+			<p>Inputs:</p>
+			<p>- String fname</p>
+			<p>- String lname</p>
+			<p>- Date pDate</p>
+			<p>- String pNotes</p>
+			<p>- File pScan</p>
+			<p>- String uid</p>
+			<p>Returns:</p>
+			<p>- None</p>
+			</span>
+
 			<b><code>Patient(String fname, String lname, Date pDate, String pNotes, LinkedList<Scan> pScans)</code></b>
 			<br>
 			<span>
@@ -70,6 +87,23 @@
 			<p>- Date pDate</p>
 			<p>- String pNotes</p>
 			<p>- LinkedList<Scan> pScans</p>
+			<p>Returns:</p>
+			<p>- None</p>
+			</span>
+
+			<b><code>Patient(String fname, String lname, Date pDate, String pNotes, LinkedList<Scan> pScans, String uid)</code></b>
+			<br>
+			<span>
+			Creates a Patient with multiple scans and an established UID
+			</span>
+			<span>
+			<p>Inputs:</p>
+			<p>- String fname</p>
+			<p>- String lname</p>
+			<p>- Date pDate</p>
+			<p>- String pNotes</p>
+			<p>- LinkedList<Scan> pScans</p>
+			<p>- String uid</p>
 			<p>Returns:</p>
 			<p>- None</p>
 			</span>
