Task377-UNET Data Docs

--- a/BSSCSFramework/BSSCS_DOCS/main.html
+++ b/BSSCSFramework/BSSCS_DOCS/main.html
@@ -28,5 +28,9 @@
 			<a href="conversion.html"><h2>Image Conversion</h2></a>
 			<p>Methods used to convert DICOM images to NIFTI format</p>
 		</div>
+		<div>
+			<a href="UNET_Data.html"><h2>UNET Data</h2></a>
+			<p>Methods used for accessing data and giving it to the UNET</p>
+		</div>
 	</body>
 </html>
