Task378-UNET_Graph docs

--- a/BSSCSFramework/BSSCS_DOCS/main.html
+++ b/BSSCSFramework/BSSCS_DOCS/main.html
@@ -32,5 +32,9 @@
 			<a href="UNET_Data.html"><h2>UNET Data</h2></a>
 			<p>Methods used for accessing data and giving it to the UNET</p>
 		</div>
+		<div>
+			<a href="UNET_Graph.html"><h2>UNET Graph</h2></a>
+			<p>Methods used for creating and training the UNET</p>
+		</div>
 	</body>
 </html>
