--- a/TBI-GUI/GUI_DOCS/patientDoc.html
+++ b/TBI-GUI/GUI_DOCS/patientDoc.html
@@ -5,7 +5,7 @@
 	<body>
 		<a href="main.html">Back - Main</a>
 
-		<h1>Patient</h1>
+		<h1>Patient extends Info implements Serializable, Comparable</h1>
 		<div style="width:500px">
 			<span>
       <p>
@@ -145,7 +145,7 @@
 			<p>- Scan</p>
 			</span>
 
-			<b><code>Scan delRrocScan(int index)</code></b>
+			<b><code>Scan delRawScan(int index)</code></b>
 			<br>
 			<span>
 			Deletes an unprocessed scan from the patient's list
@@ -167,42 +167,6 @@
 			<p>- None</p>
 			<p>Returns:</p>
 			<p>- Date</p>
-			</span>
-
-			<b><code>File getFile()</code></b>
-			<br>
-			<span>
-			Returns the file location that the Patient is stored at
-			</span>
-			<span>
-			<p>Inputs:</p>
-			<p>- None</p>
-			<p>Returns:</p>
-			<p>- File</p>
-			</span>
-
-			<b><code>String getFirstName()</code></b>
-			<br>
-			<span>
-			Returns the first name of the Patient
-			</span>
-			<span>
-			<p>Inputs:</p>
-			<p>- None</p>
-			<p>Returns:</p>
-			<p>- String</p>
-			</span>
-
-			<b><code>String getLastName()</code></b>
-			<br>
-			<span>
-			Returns the last name of the Patient
-			</span>
-			<span>
-			<p>Inputs:</p>
-			<p>- None</p>
-			<p>Returns:</p>
-			<p>- String</p>
 			</span>
 
 			<b><code>Date getLastRawScanDate()</code></b>
@@ -333,30 +297,6 @@
 			<span>
 			<p>Inputs:</p>
 			<p>- Date</p>
-			<p>Returns:</p>
-			<p>- None</p>
-			</span>
-
-			<b><code>void setFirstName(String fname)</code></b>
-			<br>
-			<span>
-			Sets the Patient's first name
-			</span>
-			<span>
-			<p>Inputs:</p>
-			<p>- String</p>
-			<p>Returns:</p>
-			<p>- None</p>
-			</span>
-
-			<b><code>void setLastName(String lname)</code></b>
-			<br>
-			<span>
-			Sets the Patient's last name
-			</span>
-			<span>
-			<p>Inputs:</p>
-			<p>- String</p>
 			<p>Returns:</p>
 			<p>- None</p>
 			</span>
