--- a/TBI-GUI/GUI_DOCS/patientManagementDoc.html
+++ b/TBI-GUI/GUI_DOCS/patientManagementDoc.html
@@ -5,7 +5,7 @@
 	<body>
 		<a href="main.html">Back - Main</a>
 
-		<h1>Patient Management</h1>
+		<h1>PatientManagement extends InfoManagement</h1>
 		<div style="width:500px">
 			<span>
       <p>
@@ -178,7 +178,7 @@
 			<p>Returns:</p>
 			<p>- LinkedList</p>
 			</span>
-			
+
 		</div>
 	</body>
 </html>
