US439_Task450 Documentation for the theme creator

--- a/TBI-GUI/GUI_DOCS/main.html
+++ b/TBI-GUI/GUI_DOCS/main.html
@@ -28,5 +28,9 @@
 			<a href="likelyTraumaAreaDoc.html"><h2>Likely Trauma Area Scene</h2></a>
 			<p>Creates the Likely Traume Area scene to display in the GUI.</p>
 		</div>
+		<div>
+			<a href="themeCreatorDoc.html"><h2>Theme Creator Scene</h2></a>
+			<p>Creates the Theme Creator scene to display in the GUI.</p>
+		</div>
 	</body>
 </html
