Add documentation for the niftiviewer

--- a/TBI-GUI/GUI_DOCS/main.html
+++ b/TBI-GUI/GUI_DOCS/main.html
@@ -28,5 +28,9 @@
 			<a href="likelyTraumaAreaDoc.html"><h2>Likely Trauma Area Scene</h2></a>
 			<p>Creates the Likely Traume Area scene to display in the GUI.</p>
 		</div>
+		<div>
+			<a href="NiftiViewerDoc.html"><h2>Nifti Viewer</h2></a>
+			<p>Opens window to view nifti images.</p>
+		</div>
 	</body>
 </html
