NN Util Documentation

--- a/TBI-GUI/GUI_DOCS/patientDoc.html
+++ b/TBI-GUI/GUI_DOCS/patientDoc.html
@@ -132,6 +132,20 @@
 			<p>Returns:</p>
 			<p>- None</p>
 			</span>
+			
+			<b><code>Scan analyzeScan(Scan scan)</code></b>
+			<br>
+			<span>
+			Analyzes a scan using a preloaded Tensorflow model via utils.NNUtils. 
+			This will not work if there is not a Tensorflow model.
+			This does not modify the Patient's data at all- the new scan must be manually added.
+			</span>
+			<span>
+			<p>Inputs:</p>
+			<p>- Scan scan</p>
+			<p>Returns:</p>
+			<p>- Scan</p>
+			</span>
 
 			<b><code>Scan delProcScan(int index)</code></b>
 			<br>
