Add a timer to opening the niftiviewer

--- a/TBI-GUI/GUI_DOCS/NiftiViewerDoc.html
+++ b/TBI-GUI/GUI_DOCS/NiftiViewerDoc.html
@@ -18,7 +18,11 @@
 			<br>
 
 			</span><br>
-			<b>You will need to install the following modules to run the niftiviewer</b>
+			<span>You will need Python 3.6 or later installed and added as a PATH variable</span>
+			<br>
+			<span>in order to run this viewer.</span>
+			<br>
+			<b>You will also need to install the following modules to run the niftiviewer</b>
             <br>
             <b>Module Requirements:</b>
 			<br>
