recoupling raw scans and processed scans. commit also indicative of research into nifti modification in Java

--- a/TBI-GUI/GUI_DOCS/patientDoc.html
+++ b/TBI-GUI/GUI_DOCS/patientDoc.html
@@ -124,7 +124,8 @@
 			<b><code>void addRawScan(Scan scan)</code></b>
 			<br>
 			<span>
-			Adds a new unprocessed scan to the patient's list
+			Adds a new unprocessed scan to the patient's list. Automatically analyzes the scan
+			 and adds it to the processed scan list via addProcScan
 			</span>
 			<span>
 			<p>Inputs:</p>
