--- a/TBI-GUI/GUI_DOCS/main.html
+++ b/TBI-GUI/GUI_DOCS/main.html
@@ -17,7 +17,7 @@
 			<p>Patient object.</p>
 		</div>
 		<div>
-			<a href="algorithmVisualizationDoc.html"><h2>Algoithm Visualization Scene</h2></a>
+			<a href="algorithmVisualizationDoc.html"><h2>Algorithm Visualization Scene</h2></a>
 			<p>Creates the algorithm visualization scene to display in the GUI.</p>
 		</div>
 		<div>
