US477_Task517 README

--- a/TBI-GUI/GUI_DOCS/NiftiViewerDoc.html
+++ b/TBI-GUI/GUI_DOCS/NiftiViewerDoc.html
@@ -12,7 +12,7 @@
 			<br>
 			<span>the user to view Nifti images slice by slice. This is accomplished using</span>
 			<br>
-			<span>the nibable and matplotlib python modules to render and display</span>
+			<span>the nibabel and matplotlib python modules to render and display</span>
 			<br>
 			<span>different elements.</span>
 			<br>
